tests/Project1/student_test/test_1_s13.out
Error type B at Line 1: Missing closing parenthesis ')'
Error type B at Line 2: Missing semicolon ';'
Error type B at Line 3: Missing semicolon ';'
