tests/Project1/student_test/test_1_s13.spl
int func({
    int a=1
    int b=1
}